--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^6.7.0",
-    "@react-router/fs-routes": "^7.6.3",
-    "@react-router/node": "^7.6.3",
-    "@react-router/serve": "^7.6.3",
+    "@react-router/dev": "^7.9.3",
+    "@react-router/fs-routes": "^7.9.3",
+    "@react-router/node": "^7.9.3",
+    "@react-router/serve": "^7.9.3",
     "@simplewebauthn/browser": "^13.1.0",
     "@simplewebauthn/server": "^13.1.1",
     "@tailwindcss/postcss": "^4.1.11",
@@ -42,24 +43,21 @@
     "install": "^0.13.0",
     "isbot": "^3.7.0",
     "json-schema-to-typescript": "^15.0.4",
-    "marked": "^4.0.16",
     "msw": "^2.8.6",
     "node-cron": "^4.0.0",
     "nodemailer": "^6.9.1",
-    "npm": "^11.0.0",
     "prisma": "^6.7.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-modal": "^3.16.1",
-    "react-router": "^7.5.3",
+    "react-router": "^7.9.3",
     "tiny-invariant": "^1.2.0",
     "valibot": "^1.1.0",
-    "xml2js": "^0.6.2",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vite-plugin-babel": "^1.3.2"
+    "vite": "^7.0.4",
+    "vite-plugin-babel": "^1.3.2",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.6.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/eslint": "^8.4.3",
     "@types/howler": "2.1.2",
@@ -68,9 +66,7 @@
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/react-modal": "^3.13.1",
-    "@types/xml2js": "^0.4.11",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "c8": "^7.11.3",
     "cross-env": "^7.0.3",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
@@ -78,7 +74,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-63e3235-20250105",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.3",
     "eslint-plugin-react-hooks": "^6.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
@@ -86,14 +82,12 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.11",
-    "tsconfig-paths": "^4.0.0",
     "tsx": "^4.20.3",
     "typescript": "^5.1.6",
-    "vite": "^7.0.4",
     "vitest": "^3.1.4"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=22"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
